小米首页JS轮播图

--- a/mi/index.html
+++ b/mi/index.html
@@ -115,16 +115,16 @@
 				</div>
 				<div class="carousel">
 					<ul class="carousel-imgs">
-						<li class="carousel-imgs-item"><img src="imagesjrx/b1.jpg" alt=""></li>
-						<li class="carousel-imgs-item"><img src="imagesjrx/b2.jpg" alt=""></li>
-						<li class="carousel-imgs-item"><img src="imagesjrx/b3.jpg" alt=""></li>
+						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b1.jpg" alt=""></a></li>
+						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b2.jpg" alt=""></a></li>
+						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b3.jpg" alt=""></a></li>
 						<!-- <li class="carousel-imgs-item"><img src="imagesjrx/b2.jpg" alt=""></li>
 						<li class="carousel-imgs-item"><img src="imagesjrx/b1.jpg" alt=""></li> -->
 					</ul>
 					<span class="arrow left-arrow iconfont">&#xe627;</span>
 					<span class="arrow right-arrow iconfont">&#xe622;</span>
 					<ul class="carousel-btn">
-						<li></li>
+						<li class="active"></li>
 						<li></li>
 						<li></li>
 					</ul>
@@ -376,7 +376,7 @@
 				<div class="hd">
 					<h2 class="title">家电</h2>
 					<div class="more tab">
-						<ul>
+						<ul id="tab-list">
 							<li class="tab-item tab-item-active">热门</li>
 							<li class="tab-item">电视影音</li>
 							<li class="tab-item">电脑</li>
@@ -394,6 +394,110 @@
 						</li>			
 					</div>
 					<div class="col2">
+						<ul class="elec-product">
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+								</a>
+								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+								<span class="flag flag-off">减 800 元</span>
+								<div class="view">
+									<p class="recommend">我要不催货，还不给我送货，都等了一个星期了，买了是为了看NBA
+									</p>
+									<p class="author">
+										来自于<span>某某某</span>的评价
+									</p>
+								</div>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+								</a>
+								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+								</a>
+								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+								</a>
+								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+								</a>
+								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+								</a>
+								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-m">
+								<a href="#">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+								</a>
+								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								<p class="product-desc">Unibody 全陶瓷</p>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+									<del>4699元</del>
+								</p>
+							</li>
+							<li class="product-item product-item-min">
+								<a href="../mi-band/mi-band.html">
+									<img src="imagesjrx/ca.png" alt="" class="product-img">
+								</a>
+								<a href="../mi-band/mi-band.html">
+									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+								</a>
+								<p class="product-price">
+									<strong>3699</strong><span>&nbsp;元</span>
+								</p>
+							</li>
+							<li class="product-item product-item-min">
+								<a href="#" class="more">
+									浏览更多<span>热门</span>
+									<i class="iconfont">&#xe615;</i>
+								</a>
+							</li>
+						</ul>
 						<ul class="elec-product">
 							<li class="product-item product-item-m">
 								<a href="#">
@@ -737,4 +841,5 @@
 		</div>
 	</section>
 </body>
+<script src="js/index.js"></script>
 </html>
