小米首页JS导航栏部分 jrx

--- a/mi/index.html
+++ b/mi/index.html
@@ -36,6 +36,10 @@
 							(<span class="cart-num">0</span>)
 						</a>
 					</div>
+					<div class="cart-content">
+						<div class="loader"></div>
+						<span class="empty-cart">购物车中还没有商品，赶紧来购买吧！</span>
+					</div>
 				</div>
 				<div class="user-info">
 					<ul>
@@ -92,6 +96,18 @@
 							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
 						</ul>		
 					</div>
+				</div>
+			</div>
+			<div class="header-nav-content">
+				<div class="container">
+					<ul>
+						<li>
+							<div class="img-box"><a href="#"><img src="imagesjrx/ph1.jpg" alt=""></a></div>
+							<p class="product-name">小米MIX3</p>
+							<p class="product-price">3299元起</p>
+							<span class="tag">新品</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</header>
@@ -841,5 +857,6 @@
 		</div>
 	</section>
 </body>
+<script src="js/util.js"></script>
 <script src="js/index.js"></script>
 </html>
