--- a/mi/index.html
+++ b/mi/index.html
@@ -102,7 +102,11 @@
 				<div class="container">
 					<ul>
 						<li>
-							<div class="img-box"><a href="#"><img src="imagesjrx/ph1.jpg" alt=""></a></div>
+							<div class="img-box">
+								<a href="#">
+									<img src="imagesjrx/ph1.jpg" alt="">
+								</a>
+							</div>
 							<p class="product-name">小米MIX3</p>
 							<p class="product-price">3299元起</p>
 							<span class="tag">新品</span>
@@ -181,9 +185,9 @@
 						<div class="timer-box">
 							<span class="timer-num">00</span>
 							<span class="timer-dash">:</span>
-							<span class="timer-num">23</span>
+							<span class="timer-num">00</span>
 							<span class="timer-dash">:</span>
-							<span class="timer-num">12</span>
+							<span class="timer-num">00</span>
 						</div>
 					</div>
 					<div class="col2">
