小米JS轮播图

--- a/mi/index.html
+++ b/mi/index.html
@@ -100,18 +100,7 @@
 			</div>
 			<div class="header-nav-content">
 				<div class="container">
-					<ul>
-						<li>
-							<div class="img-box">
-								<a href="#">
-									<img src="imagesjrx/ph1.jpg" alt="">
-								</a>
-							</div>
-							<p class="product-name">小米MIX3</p>
-							<p class="product-price">3299元起</p>
-							<span class="tag">新品</span>
-						</li>
-					</ul>
+					<div class="loader"></div>
 				</div>
 			</div>
 		</header>
@@ -133,13 +122,13 @@
 						<li class="cate-item"><a href="#">生活 箱包<i class="iconfont">&#xe623;</i></a></li>
 					</ul>
 				</div>
-				<div class="carousel">
-					<ul class="carousel-imgs">
+				<div class="carousel" id="carousel">
+					<!-- <ul class="carousel-imgs">
 						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b1.jpg" alt=""></a></li>
 						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b2.jpg" alt=""></a></li>
 						<li class="carousel-imgs-item"><a href=""><img src="imagesjrx/b3.jpg" alt=""></a></li>
-						<!-- <li class="carousel-imgs-item"><img src="imagesjrx/b2.jpg" alt=""></li>
-						<li class="carousel-imgs-item"><img src="imagesjrx/b1.jpg" alt=""></li> -->
+						<li class="carousel-imgs-item"><img src="imagesjrx/b2.jpg" alt=""></li>
+						<li class="carousel-imgs-item"><img src="imagesjrx/b1.jpg" alt=""></li>
 					</ul>
 					<span class="arrow left-arrow iconfont">&#xe627;</span>
 					<span class="arrow right-arrow iconfont">&#xe622;</span>
@@ -147,7 +136,7 @@
 						<li class="active"></li>
 						<li></li>
 						<li></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 			<div class="hot clearfix">
@@ -861,6 +850,7 @@
 		</div>
 	</section>
 </body>
+<script src="js/data.js"></script>
 <script src="js/util.js"></script>
 <script src="js/index.js"></script>
 </html>
