--- a/mi/index.html
+++ b/mi/index.html
@@ -108,19 +108,62 @@
 	<section class="home">
 		<div class="container">
 			<div class="banner">
-				<div class="cate">
-					<ul>
-						<li class="cate-item"><a href="#">手机 电话卡<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">电视 盒子<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">笔记本 平板<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">家电 插线板<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">出行 穿戴<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">智能 路由器<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">电源 配件<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="ertongzsc.html">健康 儿童<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">耳机 音箱<i class="iconfont">&#xe623;</i></a></li>
-						<li class="cate-item"><a href="#">生活 箱包<i class="iconfont">&#xe623;</i></a></li>
-					</ul>
+				<div class="cate-box">
+					<div class="cate">
+						<ul>
+							<li class="cate-item"><a href="#">手机 电话卡<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">电视 盒子<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">笔记本 平板<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">家电 插线板<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">出行 穿戴<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">智能 路由器<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">电源 配件<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="ertongzsc.html">健康 儿童<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">耳机 音箱<i class="iconfont">&#xe623;</i></a></li>
+							<li class="cate-item"><a href="#">生活 箱包<i class="iconfont">&#xe623;</i></a></li>
+						</ul>
+					</div>
+					<div class="cate-content">
+						<ul>
+							<li>
+								<a href="#">
+									<img src="imagesjrx/small1.jpg" alt="">
+									<span>小米6X</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="imagesjrx/small1.jpg" alt="">
+									<span>小米6X</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="imagesjrx/small1.jpg" alt="">
+									<span>小米6X</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="imagesjrx/small1.jpg" alt="">
+									<span>小米6X</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="imagesjrx/small1.jpg" alt="">
+									<span>小米6X</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="imagesjrx/small1.jpg" alt="">
+									<span>小米6X</span>
+								</a>
+							</li>
+							
+						</ul>
+					</div>
 				</div>
 				<div class="carousel" id="carousel">
 					<!-- <ul class="carousel-imgs">
