小米首页JS 完善

--- a/mi/index.html
+++ b/mi/index.html
@@ -124,45 +124,7 @@
 						</ul>
 					</div>
 					<div class="cate-content">
-						<ul>
-							<li>
-								<a href="#">
-									<img src="imagesjrx/small1.jpg" alt="">
-									<span>小米6X</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="imagesjrx/small1.jpg" alt="">
-									<span>小米6X</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="imagesjrx/small1.jpg" alt="">
-									<span>小米6X</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="imagesjrx/small1.jpg" alt="">
-									<span>小米6X</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="imagesjrx/small1.jpg" alt="">
-									<span>小米6X</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="imagesjrx/small1.jpg" alt="">
-									<span>小米6X</span>
-								</a>
-							</li>
-							
-						</ul>
+				
 					</div>
 				</div>
 				<div class="carousel" id="carousel">
@@ -223,7 +185,7 @@
 						</div>
 					</div>
 					<div class="col2">
-						<ul class="phone-product"">
+						<ul class="product-list">
 							<li class="product-item">
 								<a href="../flash/flash.html">
 									<div class="bg"></div>
@@ -280,7 +242,64 @@
 										<del>4699元</del>
 									</p>
 								</div>
-							</li>																			
+							</li>	
+							<li class="product-item">
+								<a href="../flash/flash.html">
+									<div class="bg"></div>
+								</a>
+								<div class="content">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
+									<p class="product-desc">Unibody 全陶瓷</p>
+									<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元</span>
+										<del>4699元</del>
+									</p>
+									<span class="flag flag-off">一折秒杀</span>
+								</div>
+							</li>
+							<li class="product-item">
+								<a href="../flash/flash.html">
+									<div class="bg"></div>
+								</a>
+								<div class="content">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
+									<p class="product-desc">Unibody 全陶瓷</p>
+									<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元</span>
+										<del>4699元</del>
+									</p>
+								</div>
+							</li>
+							<li class="product-item">
+								<a href="../flash/flash.html">
+									<div class="bg"></div>
+								</a>
+								<div class="content">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
+									<p class="product-desc">Unibody 全陶瓷</p>
+									<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元</span>
+										<del>4699元</del>
+									</p>
+								</div>
+							</li>
+							<li class="product-item">
+								<a href="../flash/flash.html">
+									<div class="bg"></div>
+								</a>
+								<div class="content">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
+									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
+									<p class="product-desc">Unibody 全陶瓷</p>
+									<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元</span>
+										<del>4699元</del>
+									</p>
+								</div>
+							</li>																
 						</ul>
 					</div>
 				</div>
@@ -446,7 +465,7 @@
 						</li>			
 					</div>
 					<div class="col2">
-						<ul class="elec-product">
+						<!-- <ul class="elec-product">
 							<li class="product-item product-item-m">
 								<a href="#">
 									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
@@ -653,7 +672,7 @@
 									<i class="iconfont">&#xe615;</i>
 								</a>
 							</li>
-						</ul>
+						</ul> -->
 					</div>
 				</div>
 			</div>
