--- a/mi/index.html
+++ b/mi/index.html
@@ -465,214 +465,7 @@
 						</li>			
 					</div>
 					<div class="col2">
-						<!-- <ul class="elec-product">
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-								<span class="flag flag-off">减 800 元</span>
-								<div class="view">
-									<p class="recommend">我要不催货，还不给我送货，都等了一个星期了，买了是为了看NBA
-									</p>
-									<p class="author">
-										来自于<span>某某某</span>的评价
-									</p>
-								</div>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-min">
-								<a href="../mi-band/mi-band.html">
-									<img src="imagesjrx/ca.png" alt="" class="product-img">
-								</a>
-								<a href="../mi-band/mi-band.html">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								</a>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-								</p>
-							</li>
-							<li class="product-item product-item-min">
-								<a href="#" class="more">
-									浏览更多<span>热门</span>
-									<i class="iconfont">&#xe615;</i>
-								</a>
-							</li>
-						</ul>
-						<ul class="elec-product">
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-								<span class="flag flag-off">减 800 元</span>
-								<div class="view">
-									<p class="recommend">我要不催货，还不给我送货，都等了一个星期了，买了是为了看NBA
-									</p>
-									<p class="author">
-										来自于<span>某某某</span>的评价
-									</p>
-								</div>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-m">
-								<a href="#">
-									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
-								</a>
-								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								<p class="product-desc">Unibody 全陶瓷</p>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-									<del>4699元</del>
-								</p>
-							</li>
-							<li class="product-item product-item-min">
-								<a href="../mi-band/mi-band.html">
-									<img src="imagesjrx/ca.png" alt="" class="product-img">
-								</a>
-								<a href="../mi-band/mi-band.html">
-									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
-								</a>
-								<p class="product-price">
-									<strong>3699</strong><span>&nbsp;元</span>
-								</p>
-							</li>
-							<li class="product-item product-item-min">
-								<a href="#" class="more">
-									浏览更多<span>热门</span>
-									<i class="iconfont">&#xe615;</i>
-								</a>
-							</li>
-						</ul> -->
+						<div class="elec-product"></div>
 					</div>
 				</div>
 			</div>
