--- a/mi/ertongzsc.html
+++ b/mi/ertongzsc.html
@@ -59,16 +59,21 @@
 						<a href="" herf="#">全部分类</a>
 						<div class="search-keyword-list">
 						<ul>
-							<li class="keyword-item"><a href="#"><span class="keyword">手机 电话卡</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">电视 盒子</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">笔记本 平板</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">家电 插线板</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">出行 穿戴</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">智能 路由器</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">电源 配件</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">健康 儿童</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">耳机 音响</span><i class="iconfont">&#xe623;</i></a></li>
-							<li class="keyword-item"><a href="#"><span class="keyword">生活 箱包</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item">
+								<a href="#">
+									<span class="keyword" id="key">手机 电话卡</span>
+									<i class="iconfont">&#xe623;</i>
+								</a>
+							</li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">电视 盒子</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">笔记本 平板</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">家电 插线板</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">出行 穿戴</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">智能 路由器</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">电源 配件</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">健康 儿童</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">耳机 音响</span><i class="iconfont">&#xe623;</i></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword" id="key">生活 箱包</span><i class="iconfont">&#xe623;</i></a></li>
 						</ul>
 					</div>
 					</li>
